Fixed broken CSS due to new routing

--- a/client/fund/fund.less
+++ b/client/fund/fund.less
@@ -1,4 +1,4 @@
-.fund-container{
+.container-fundTab{
   .fund-title{
     h3{
       margin-top:0;
